update formation component

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -110,26 +110,12 @@ header .arrowImg:hover{
 }
 /* ------------ end school section------------ */
 
-
-
-/* ------------------------------------------------- */
-/* ------------ start formation section ------------ */
-/* ------------------------------------------------- */
-.formationSection {
-    padding: 40px 0;
-}
-
-.cardd {
-    background-color: red;
-}
-/* ------------ end formation section ------------ */
-
 /* ------------------------------------------------- */
 /* ------------ start slider section ------------ */
 /* ------------------------------------------------- */
-.sliderSection{
+/* .sliderSection{
     padding: 40px 0;
-}
+} */
 /* ------------ end slider section ------------ */
 
 
