--- a/FinaSchoolReact/src/components/formation/formation.css
+++ b/FinaSchoolReact/src/components/formation/formation.css
@@ -19,4 +19,10 @@
     font-size: 30px;
     margin-right: 7px;
 }
+
+.icons{
+    color: #157cb0;
+    font-size: 80px;
+    margin-right: 10px;
+}
 /* ------------ end formation section ------------ */
