--- a/FinaSchoolReact/src/components/pre_inscreption/preInscreption.css
+++ b/FinaSchoolReact/src/components/pre_inscreption/preInscreption.css
@@ -8,14 +8,11 @@
     background-position: center;
 }
 
+
+
 .inputtt{
-    outline: none !important;
-    padding: 8px 10px;
-    border: 1px solid #273238;
-    box-shadow: none;
     width: 100%;
-    border-radius: 5px;
-    background: #fcf8f2
+    color: #fff;
 }
 
 .inscriptionSection form input:focus{
