--- a/FinaSchoolReact/src/components/contact/contact.css
+++ b/FinaSchoolReact/src/components/contact/contact.css
@@ -11,8 +11,8 @@
 
 .contactSection form .textarea {
     background: #ffff;
-    width: 100%;
-    height: 90px;
+    width: 100% !important;
+    height: 90px !important;
     outline: none !important;
     padding: 8px 10px;
     border: 1px solid #273238;
