--- a/FinaSchoolReact/src/pages/login/login.css
+++ b/FinaSchoolReact/src/pages/login/login.css
@@ -1,8 +1,13 @@
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+.logoImg{
+    width: 100px;
+    margin-bottom: 20px;
+}
+
 .loginn {
-    background: #76b852;
+    background: #6AC9DC;
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -42,7 +47,7 @@
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #4CAF50;
+    background: #6AC9DC;
     width: 100%;
     border: 0;
     padding: 15px;
@@ -56,7 +61,7 @@
 .loginn .form button:hover,
 .loginn .form button:active,
 .loginn .form button:focus {
-    background: #43A047;
+    background: #3ca8bd;
 }
 
 .loginn .form .message {
@@ -66,7 +71,7 @@
 }
 
 .loginn .form .message a {
-    color: #4CAF50;
+    color: #3ca8bd;
     text-decoration: none;
 }
 
