--- a/FinaSchoolReact/src/pages/layouts/pagesAdmin/revenu/revenu.css
+++ b/FinaSchoolReact/src/pages/layouts/pagesAdmin/revenu/revenu.css
@@ -5,3 +5,11 @@
 .bg_table_head {
     background-color: #fcf4cc;
 }
+
+.bg_revenufooter{
+    background-color: rgb(232, 232, 232);
+}
+
+.bg_revenuheader{
+    background-color: rgb(212, 212, 212);
+}
