--- a/FinaSchoolReact/src/pages/layouts/pagesAdmin/widget/widget.css
+++ b/FinaSchoolReact/src/pages/layouts/pagesAdmin/widget/widget.css
@@ -1,10 +1,16 @@
+.allContent{
+    background-color: rgb(240, 240, 240);
+    height: 100%;
+}
+
 .wdg{
-    border: 1px solid #444;
+    border: 1px solid rgb(220, 220, 220);
     padding: 20px;
     margin: 10px 0;
     border-radius: 10px;
+    background-color: #fff;
 }
-
+/*  */
 .wdg label{
     width: 100px;
 }
