--- a/FinaSchoolReact/src/pages/layouts/pagesAdmin/widget/widget.css
+++ b/FinaSchoolReact/src/pages/layouts/pagesAdmin/widget/widget.css
@@ -9,8 +9,8 @@
   margin: 10px 0;
   border-radius: 10px;
   background-color: #fff;
+  position: relative;
 }
-/*  */
 
 .inpuut {
   margin: 10px 0;
@@ -30,4 +30,20 @@
   padding: 10px 0;
   border-radius: 5px;
   background-color: #eeeff1;
+}
+
+.all_cnt {
+  display: flex;
+  justify-content: space-between;
+}
+
+.inpts {
+  width: 100%;
+  padding: 0 20px 0 0;
+}
+
+.support_img {
+  border: 1px solid rgb(130, 130, 130);
+  width: 100%;
+  height: auto;
 }
